Big Menu Design WIP

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     </div></div>
 
     <!-- The React APP div -->
-    <div class="root bg" id="root" style="background: black;"></div>
+    <div class="root" id="root"></div>
 
     <noscript class="needjs">
       <div>You need to enable JavaScript to run this app.</div>
