--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
   <body>
     <div class="loader" id="loader"><div>
       <div class="loadericon">
-        <div>Loading<br/>Please wait</div>
+        <!-- <div>Loading<br/>Please wait</div> -->
       </div>
       <div class="loading"></div>
     </div></div>
