--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Startingames Settings Demo</title>
+    <title>Startingames React Settings Demo</title>
   </head>
   <body>
     <div class="loader" id="loader"><div>
